# UE-integrated-pipeline

./: .gitignore
data/demo/feature_fam/: 0.csv
data/demo/feature_model/: 0.csv
data/demo/raw/: 0.csv
data/scripts/: fam.ipynb  feature_generator.ipynb  tra_pred_model.ipynb
fam/: FiniteAutomationMachine.cpp  FiniteAutomationMachine.hpp  FiniteAutomationMachine.py  data_processor.ipynb  fam  main  main.cpp  test.ipynb
feature_generator/: FeatureGenerator.py  feature_generator  feature_generator.cpp  main.cpp  utils.py
include/: config.hpp  constant.hpp
includes/: constant.hpp
src/: MyDataset.py  constant.py
tra_pred_model/: CMakeLists.txt  main.cpp  run.sh
tra_pred_model/libtorch/: README.md
tra_pred_model/model/: README.md
tra_pred_model_onnx/: build_run.sh  cvm2onnx.ipynb  log_reader.hpp  log_writer  log_writer.cpp  main.cpp  main_logsim  main_logsim.cpp  script2onnx.ipynb
tra_pred_model_onnx/data/scripts/: fam.ipynb  feature_generator.ipynb  log.ipynb
tra_pred_model_onnx/model/: model.onnx  model_cvm.onnx  model_tft_vqvae_cpu_preproc.pt
